# Studio

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_CN.md  pyproject.toml
docker/: .env.example  (+6 more)
service/: .air.schedule.toml  .air.toml  .air.web.toml  .golangci.yaml  go.mod  go.sum  main.go  pyproject.toml
service/cmd/api/: main.go  migrate.go  server.go
service/cmd/api/app/: server.go
service/cmd/schedule/: schedule.go
service/docs/: docs.go  swagger.json  swagger.yaml
service/environment/: env_impl.go
service/internal/config/: config.go  dynamic.go  env.go
service/internal/configs/schedule/: config.go  dynamic.go  env.go
service/internal/configs/webapp/: config.go  dynamic.go  env.go
service/pkg/common/: customdb.go  customdb_test.go  custondb.go  response.go
service/pkg/common/code/: code_string.go  errCode.go
service/pkg/common/constant/: constant.go
service/pkg/common/uuid/: uuid.go
service/pkg/core/environment/: environment.go  model.go
service/pkg/core/login/: login.go  model.go
service/pkg/core/material/: material.go  model.go
service/pkg/model/: environment.go  environment_test.go  flociety.go  lab.go  laboratory.go  material.go  pose.go  workflow.go
service/pkg/repo/: account.go  base.go  environment.go  invite.go  material.go  sandbox.go  tags.go  workflow.go
service/pkg/utils/: compare.go  concurrent.go  dag.go  dag_test.go  eq.go  execute.go  file.go  gin.go  jwt.go  jwt_test.go  lab.go  resty.go  signal.go  slice.go  slice_test.go  strings.go
service/pkg/web/: router.go  routes.go  schedule.go
(+313 files in other folders)
