[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-service"
version = "0.1.0"
description = "Studio Service - Go-based backend service"
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

[project.optional-dependencies]
dev = ["pre-commit>=3.5.0"]

[tool.setuptools]
packages = []
